<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_root">

    <LinearLayout
        android:id="@+id/linear_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/email_field_create"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_hint"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/uad_warning"
            />

        <EditText
            android:id="@+id/pass_field_create"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/pass_hint"
            android:gravity="center"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            />
        <EditText
            android:id="@+id/conf_pass_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/conf_pass_hint"
            android:gravity="center"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass"
                style="?android:attr/buttonBarButtonStyle"
                />
            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                style="?android:attr/buttonBarButtonStyle"
                />
        </LinearLayout>
        <Button
            android:id="@+id/create_acc_submit"
            android:backgroundTint="@android:color/holo_green_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            />

    </LinearLayout>

</LinearLayout>