<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_root">

    <LinearLayout
        android:id="@+id/linear_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_hint"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/forgot_pass_hint"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                style="?android:attr/buttonBarButtonStyle"
                />
            <Button
                android:id="@+id/create_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_acc"
                style="?android:attr/buttonBarButtonStyle"
                />
        </LinearLayout>
        <Button
            android:id="@+id/submit"
            android:backgroundTint="@android:color/holo_green_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            />
    </LinearLayout>

</LinearLayout>