<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/constraint_root">

    <LinearLayout
        android:id="@+id/linear_root"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_hint"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/pass_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/pass_hint"
            android:gravity="center"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass"/>
            <Button
                android:id="@+id/create_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_acc"
                />
        </LinearLayout>
        <Button
            android:id="@+id/submit_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_login"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>